Fix brands footer spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -242,7 +242,6 @@ footer ul {
     margin-top: 25px;
     background-color: #f5f5f5;
     letter-spacing: 1px;
-    position: relative;
 }
 
 .navigation-items-container {
@@ -290,7 +289,6 @@ footer ul {
     flex-wrap: wrap;
     height: 250px;
     padding-top: 20px;
-    position: absolute;
 }
 
 .navigation-options h3 {
@@ -606,7 +604,7 @@ footer ul {
 }
 
 .brand-outer-contianer{
-    width: 100%; 
+    /* width: 100%;  */
 }
 
 .brand-container {
@@ -614,12 +612,11 @@ footer ul {
     flex-direction: column;
     text-transform: uppercase;
     font-size: 4rem;
-    margin: auto;
-    width: 85%;
 }
 
 .brand-letter {
     scroll-margin-top: 210px;
+    margin-left: 20px;
 }
 
 .brand-container a:hover {
